Implemented attack generation

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <input type="button" value="+" class="btn addremove" onclick="addLegendary();">
                 </div>
                 <div id="legendary">
-                    <input id='legendary-desc' placeholder="The foo can take 3 legendary actions, choosing from the options below.">
+                    <input name='legendary-action-desc' placeholder="The foo can take 3 legendary actions, choosing from the options below.">
                     <div class="actions"></div>
                 </div>
 
