--- a/index2.html
+++ b/index2.html
@@ -218,7 +218,7 @@
                     </div>
                     <div class="input-field col s1">
                         <label class="active" for="spell-uses-$">Uses per Day</label>
-                        <input type="text" id="spell-uses-$" placeholder="3"/>
+                        <input disabled type="text" id="spell-uses-$" placeholder="3"/>
                     </div>
                     <div class="input-field col s9">
                         <label class="active" for="spells-$">Spell Names</label>
